<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">E-Supervisor</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">pk.eyJ1IjoicmVtZHAiLCJhIjoiY2xsMmxjNmVnMmQxZzNwbXpkb3dsZm0wcCJ9._2CoSYl2RXW3g02Cj8_S3g</string>
    <string name="invalid_username_or_password">Invalid supervisor or password</string>
    <string name="in_developing">In developing</string>
    <string name="undefined">Undefined</string>
    <string name="period_selection">Period selection</string>
    <string name="date_selection">Date selection</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="number_to_string" translatable="false">%1$s</string>
    <string name="percent" translatable="false">%1$s %%</string>
    <string name="empty_time" translatable="false">00:00:00</string>
    <string name="media_store_error">Error while accessing the file system</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="number_date">%1$s from %2$s</string>
    <string name="two_double_parameters" translatable="false">%1$f, %2$f</string>
    <string name="photo_deletion">Photo deletion</string>
    <string name="delete_photo">Delete photo</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="back">Back</string>
    <string name="photos_provided_by_sv">Photos provided by the supervisor</string>
    <string name="photos_provided_by_ta">Photos provided by the trade agent</string>
    <string name="partner">Partner</string>
    <string name="partner_colon">Partner:</string>
    <string name="partner_sum">Partner\nSum</string>
    <string name="trading_agent">Trading agent</string>
    <string name="route">Route</string>
    <string name="trading_agent_colon">Trading agent:</string>
    <string name="operation_type">Operation type</string>
    <string name="comment">Comment</string>
    <string name="amount">Amount:</string>
    <string name="price">Price</string>
    <string name="sum">Sum</string>
    <string name="base">Base</string>
    <string name="status">Status</string>
    <string name="create_task_next_visit">Create a task for the next visit</string>
    <string name="create_task_next_visit_result">The result of creating a task for the next visit</string>
    <string name="day">Day</string>
    <string name="visits">Visits</string>
    <string name="ta_visits">TA visits</string>
    <string name="sv_visits">SV visits</string>
    <string name="more">More</string>
    <string name="map">Map</string>
    <string name="sales">Sales</string>
    <string name="orders">Orders</string>
    <string name="portfolio">Portfolio</string>
    <string name="done">Done</string>
    <string name="partially_done">Partially done</string>
    <string name="in_the_process_of_approval">In the process of approval</string>
    <string name="agreed">Agreed</string>
    <string name="error">Error</string>
    <string name="rejected">Rejected</string>
    <string name="in_work">In work</string>
    <string name="day_month_year_date_format" formatted="false" translatable="false">dd MMM yyyy</string>
    <string name="from">from </string>
    <string name="ok" translatable="false">OK </string>
    <string name="cancel">Cancel </string>
    <string name="authorization">Authorization</string>
    <string name="supervisor">Supervisor</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="field_is_empty">field is empty</string>
    <string name="communication_error">Communication error</string>
    <string name="doc_emix_number_date_status">Date\nNumber\nStatus</string>
    <string name="doc_emix_trading_agent_operation_type">Trading agent\nOperation type</string>
    <string name="reason_for_rejection">reason for rejection</string>
    <string name="document_flow">Document flow</string>
    <string name="agreement">Agreement</string>
    <string name="date_text">from ${docEmix.date.toLocalDate().toFormatString(context.getString(R.string.day_month_year_date_format)}</string>
    <string name="reject_reason">Reject reason</string>
    <string name="dislike_reason">Dislike reason</string>
    <string name="operation">Operation</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="PriceIndex">Price index</string>
    <string name="PaymentDeferment">Payment deferment</string>
    <string name="DistributionChannel">Distribution channel:</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="working_name">Working name</string>
    <string name="inner_distribution_channel">Inner distribution channel</string>
    <string name="edrpou">EDRPOU:</string>
    <string name="add_tc">Adding TC</string>
    <string name="new_partner_fact">New partner fact</string>
    <string name="picture_number">Pic %1$s</string>
    <string name="trade_condition">Trade condition</string>
    <string name="new_partner_data">New partner data</string>
    <string name="new_outlet_data">New outlet data</string>
    <string name="return_request">Return request</string>
    <string name="tc_data">Trade condition</string>
    <string name="outlet_name">"Outlet name"</string>
    <string name="institution_type">"Institution type:"</string>
    <string name="institution_number">"Institution number"</string>
    <string name="general_outlet">"General outlet"</string>
    <string name="new_general_outlet">"New general outlet"</string>
    <string name="outlet_format">"Outlet format:"</string>
    <string name="locality">"Locality"</string>
    <string name="street">"Street"</string>
    <string name="house_number">"House number"</string>
    <string name="goods">"Goods"</string>
    <string name="series">"Series"</string>
    <string name="unit">"Unit:"</string>
    <string name="price_index">"Price index:"</string>
    <string name="payment_deferment">"Payment deferment:"</string>
    <string name="distribution_channel">"Distribution channel:"</string>
    <string name="gallery">"Gallery"</string>
    <string name="outlet">"Outlet"</string>
    <string name="outlet_colon">"Outlet:"</string>
    <string name="visit_days">"Visiting day:"</string>
    <string name="sunday">"Sunday"</string>
    <string name="monday">"Monday"</string>
    <string name="tuesday">"Tuesday"</string>
    <string name="wednesday">"Wednesday"</string>
    <string name="thursday">"Thursday"</string>
    <string name="friday">"Friday"</string>
    <string name="saturday">"Saturday"</string>
    <string name="visits_frequency">"Frequency of visits:"</string>
    <string name="photo">"Photo"</string>
    <string name="gps_coordinates">GPS coordinates:</string>
    <string name="adress">Adress:</string>
    <string name="longitude">Longitude: %1$f</string>
    <string name="latitude">Latitude: %1$f</string>
    <string name="change_coordinates">Change of coordinates</string>
    <string name="distance_meters">%1$s m</string>
    <string name="rates">Rates</string>
    <string name="sales_plan_fact">Sales plan fact</string>
    <string name="outlets_with_orders">Outlets with order</string>
    <string name="coverage">Coverage</string>
    <string name="visits_efficiency_plan">Efficiency of visits plan</string>
    <string name="visits_efficiency_fact">Efficiency of visits fact</string>
    <string name="number_of_visits_average_per_day">Number of visits average per day</string>
    <string name="total_fact">Fact</string>
    <string name="fact">Fact:</string>
    <string name="plan">Plan:</string>
    <string name="total_plan">Plan</string>
    <string name="tdp" translatable="false">TDP</string>
    <string name="balance_unit">Balance unit</string>
    <string name="trading_team">Trading team</string>
    <string name="number_orders">The numbers of orders</string>
    <string name="decipher_to">Decipher to</string>
    <string name="month_plan">Month \n plan</string>
    <string name="daily_plan">Daily \n plan</string>
    <string name="overall">Overall</string>
    <string name="team_rates">Team</string>
    <string name="connection_error">Connection timeout</string>
    <string name="auth_error">User session expired</string>
    <string name="internal_error">Internal error! Please try again later.</string>
    <string name="action_try_again">Try Again</string>
    <string name="profile">Profile</string>
    <string name="app_settings">App settings</string>
    <string name="app_language">App language</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="language_eng">English</string>
    <string name="language_ua">Ukrainian</string>
    <string name="lang_eng">ENG</string>
    <string name="lang_ua">UKR</string>
    <string name="name">Name</string>
    <string name="change_language">Change language</string>
    <string name="version">Version</string>
    <string name="role">Role</string>
    <string name="head_t_d">Head of the TD</string>
    <string name="director">Director</string>
    <string name="error_min_length">search string must be at least %1$d characters long</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="tasks">Tasks</string>
    <string name="state_colon">State:</string>
    <string name="deadline_colon">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_colon">Description:</string>
    <string name="description">Description</string>
    <string name="attach_photo">Attach photo</string>
    <string name="task_producer">Task producer</string>
    <string name="task_type">Task type</string>
    <string name="task_type_colon">Task type:</string>
    <string name="executor">Executor</string>
    <string name="executor_colon">Executor:</string>
    <string name="draft">Draft</string>
    <string name="task_state">Task state</string>
    <string name="only_my_tasks">Only my tasks</string>
    <string name="only_overdue_tasks">Only overdue tasks</string>
    <string name="new_task">New task</string>
    <string name="search">search</string>
    <string name="outlets_types">Types of outlets</string>
    <string name="tasks_creation_result_title">Tasks creation result</string>
    <string name="tasks_creation_result">%1$s tasks created</string>
    <string name="tasks_creation_error">An error occurred while creating tasks</string>
    <string name="trading_agents">Trading agents</string>
    <string name="need_fill_colon">You need to fill:</string>
    <string name="outlets">Outlets</string>
    <string name="validation_errors">Validation errors</string>
    <string name="need_select_ta">You must select at least one trading agent</string>
    <string name="outlets_in_route_TA">Outlets in the route of a trading agent</string>
    <string name="outlets_TA_not_in_route">Outlets of the agent, but not in the route of the selected day</string>
    <string name="order_by_phone">Order by phone</string>
    <string name="outlets_TT_not_TA">Outlets in the route of the TT, but not the trading agent</string>
    <string name="outlets_not_TA_in_other_TT">Outlet is not in TT routes, but is in other TT</string>
    <string name="promising_outlets">Promising outlets</string>
    <string name="time_at_the_outlet">Time at the outlet: %1$s</string>
    <string name="sum_hryvnia" translatable="false">%1$s ₴</string>
    <string name="additional">Additional</string>
    <string name="outlets_map">Map of outlets</string>
    <string name="distance_between_coordinates">Distance between coordinates:</string>
    <string name="statistics">Statistics</string>
    <string name="analysis_of_visits">Analysis of visits</string>
    <string name="visits_in_the_route">Visits in the route</string>
</resources>