<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvOutletNameLabel"
        style="@style/Text.Label.14.Gray500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        android:layout_marginTop="@dimen/DP_16"
        android:text="@string/outlet_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOutletName"
        style="@style/Text.Label.16.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutletNameLabel"
        tools:text="Продукты №438" />

    <TextView
        android:id="@+id/tvInstitutionTypeLabel"
        style="@style/Text.Label.14.Gray500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        android:layout_marginTop="@dimen/DP_6"
        android:text="@string/institution_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutletName" />

    <TextView
        android:id="@+id/tvInstitutionType"
        style="@style/Text.Label.16.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstitutionTypeLabel"
        tools:text="Магазин" />

    <TextView
        android:id="@+id/tvOutletFormatLabel"
        style="@style/Text.Label.14.Gray500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        android:layout_marginTop="@dimen/DP_6"
        android:text="@string/outlet_format"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstitutionType" />

    <TextView
        android:id="@+id/tvOutletFormat"
        style="@style/Text.Label.16.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutletFormatLabel"
        tools:text="Магазин прилавочного типу" />

    <ImageView
        android:id="@+id/ivDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/DP_8"
        android:layout_marginTop="@dimen/DP_16"
        android:background="@color/gray_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutletFormat" />

    <TextView
        android:id="@+id/tvVisitDaysLabel"
        style="@style/Text.Label.14.Gray500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        android:layout_marginTop="@dimen/DP_16"
        android:text="@string/visit_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDivider" />

    <TextView
        android:id="@+id/tvVisitDay1Label"
        style="@style/Text.Label.14.Medium.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        android:layout_marginTop="@dimen/DP_8"
        android:drawableLeft="@drawable/ic_check_empty"
        android:drawablePadding="@dimen/DP_6"
        android:text="@string/monday"
        app:layout_constraintEnd_toStartOf="@+id/tvVisitDay3Label"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitDaysLabel" />

    <TextView
        android:id="@+id/tvVisitDay2Label"
        style="@style/Text.Label.14.Medium.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_check_empty"
        android:drawablePadding="@dimen/DP_6"
        android:text="@string/tuesday"
        app:layout_constraintStart_toStartOf="@+id/tvVisitDay1Label"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitDay1Label" />

    <TextView
        android:id="@+id/tvVisitDay3Label"
        style="@style/Text.Label.14.Medium.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_check_empty"
        android:drawablePadding="@dimen/DP_6"
        android:text="@string/wednesday"
        app:layout_constraintEnd_toStartOf="@+id/tvVisitDay5Label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvVisitDay1Label"
        app:layout_constraintTop_toTopOf="@+id/tvVisitDay1Label" />

    <TextView
        android:id="@+id/tvVisitDay4Label"
        style="@style/Text.Label.14.Medium.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_check_empty"
        android:drawablePadding="@dimen/DP_6"
        android:text="@string/thursday"
        app:layout_constraintStart_toStartOf="@+id/tvVisitDay3Label"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitDay3Label" />

    <TextView
        android:id="@+id/tvVisitDay5Label"
        style="@style/Text.Label.14.Medium.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_check_empty"
        android:drawablePadding="@dimen/DP_6"
        android:text="@string/friday"
        app:layout_constraintEnd_toStartOf="@+id/tvVisitDay7Label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvVisitDay3Label"
        app:layout_constraintTop_toTopOf="@+id/tvVisitDay3Label" />

    <TextView
        android:id="@+id/tvVisitDay6Label"
        style="@style/Text.Label.14.Medium.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_check_empty"
        android:drawablePadding="@dimen/DP_6"
        android:text="@string/saturday"
        app:layout_constraintStart_toStartOf="@+id/tvVisitDay5Label"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitDay5Label" />

    <TextView
        android:id="@+id/tvVisitDay7Label"
        style="@style/Text.Label.14.Medium.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/DP_16"
        android:drawableLeft="@drawable/ic_check_empty"
        android:drawablePadding="@dimen/DP_6"
        android:text="@string/sunday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVisitDay5Label"
        app:layout_constraintTop_toTopOf="@+id/tvVisitDay5Label" />

    <TextView
        android:id="@+id/tvVisitsFrequencyLabel"
        style="@style/Text.Label.14.Gray500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        android:layout_marginTop="@dimen/DP_14"
        android:text="@string/visits_frequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitDay2Label" />

    <TextView
        android:id="@+id/tvVisitsFrequency"
        style="@style/Text.Label.16.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DP_16"
        android:text="@string/visit_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitsFrequencyLabel" />

    <ImageView
        android:id="@+id/ivBottomDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/DP_8"
        android:layout_marginTop="@dimen/DP_14"
        android:background="@color/gray_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVisitsFrequency" />

</androidx.constraintlayout.widget.ConstraintLayout>